2013-02-01  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-all.sh (--enable-multilib, --disable-multilib): Add
	argument handling accidentally deleted.

2013-01-31  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-all.sh, run-tests.sh: Add options to control parallelism
	* all-version.sh: Remove specification of PARALLEL

2013-01-31  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-all.sh: Make 4.8 specific unisrc.
	* build-uclibc.sh: Remove duplicate bugurl setting from gdbserver
	configuration.

2012-01-31  Simon Cook  <simon.cook@embecosm.com>

	* build-elf32.sh: Add --enable-sim-endian=no to configure options to
	allow correct endian simulator to be built.

2013-01-23  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-all.sh: Restore order of binutils and gcc, following
	binutils update.
	* build-uclibc.sh: Use 4.8 specific build-dir
	* build-elf32.sh: Likewise.

2013-01-23  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-all.sh: Swap order of binutils and gcc in unified tree,
	due to binutils being too old for gcc.

2013-01-22  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-all.sh: Restore creation of unified tree accidentally deleted.

2013-01-21  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-all.sh: Add --elf32/--no-elf32 and --linux/--no-linux
	options. Negate tests where empty "then" clause.
	* build-uclibc.sh: Remove build of simulator.

2013-01-21  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* dejagnu/baseboards/arc-linux-aa4.exp: Use a hostname rather than
	number.

2013-01-18  Anton Kolesov <akolesov@synopsys.com>

	* arc-init.sh (save_res): use "tr" instead of "dos2unix" to replace
	Windows' line endings with Linux' line endings.

2013-01-18  Anton Kolesov <akolesov@synopsys.com>

	* run-tests.sh. run-uclibc-tests.sh: Handle tests for big endian properly.

2013-01-18  Anton Kolesov <akolesov@synopsys.com>

	* run-tests.sh, run-elf32-tests.sh, run-uclibc-tests.sh, arc-init